fix gap between main content

--- a/index.css
+++ b/index.css
@@ -88,6 +88,7 @@ border-bottom: solid;
 .maincontent{
   display: flex;
   justify-content: space-evenly;
+  gap:10px;
   max-width: 1190px;
   margin: 56px auto;
 }
